2005-11-09  Stipe Tolj  <stolj@wapme-group.de>
   * doc/userguide/userguide.xml: fixing default values for parameters within
     the user's guide. Thanks to Dziugas Baltrunas <dziugas@gmail.com> for this.
     [Msg-Id: <943470880511081236t74d1556me79aa8611611115b@mail.gmail.com>]

2005-11-08  Alexander Malysh <amalysh at kannel.org>
   * doc/userguide/userguide.xml, gw/bb_smscconn.c, gw/msg-decl.h,
     gwlib/cfg.def: Applied patch that adds configurable max retries and
     resend frequency for the temporarily failed messages to the core.

2005-11-04  Alexander Malysh <amalysh at kannel.org>
   * gw/smsc/smsc_smpp.c: fixed memory leak in SMPP DLR handling. Bug #265.
     Thanks to "ungod" for reporting this.

2005-11-03  Stipe Tolj  <stolj@wapme-group.de>
   * configure[.in]: fixing mysql section for the sake of sparc-solaris-10. 
     Thanks to David Chkhartishvili <datoch@magtigsm.ge> for reporting this.
     [Msg-Id: <4365C800.4080402@magtigsm.ge>]

2005-11-03  Stipe Tolj  <stolj@wapme-group.de>
   * wap/wsp_strings.def: added additional charset code for UTF-16, since this
     is widely used in production environments.
     
2005-10-30  Stipe Tolj  <stolj@wapme-group.de>
   * wap/wsp_strings.def: added missing byte code for Content-disposition 
     value 'inline'.

2005-10-26  Alexander Malysh <amalysh at kannel.org>
   * gw/bb_smscconn.c: fixed memory leak when concatenated messages was sent through
     kannel and one of splits failed due to broken connection to SMSC. In this case
     we looped for ever consuming 100% CPU time and all available memory because 
     message was duplicated in SMSC module and not destroyed in core. Now we check
     whether link is OK and only then resend via the same SMSC otherwise fail as usual.
     Thanks to Wilfried Goesgens for debug help.

2005-10-25  Stipe Tolj  <stolj@wapme-group.de>
   * wap/cookies.c: added TODO to reflect the need to unify the functions